fixing dark mode issues

--- a/style.scss
+++ b/style.scss
@@ -40,9 +40,12 @@ nav ul li a{
     transition: .2s ease;
 }
 
-
 nav ul li a:hover{
-    color: $soft-blue;
+    color: #83b6fd;
+}
+
+nav ul li:hover{
+    color: #83b6fd;
 }
 
 .mainCard {
@@ -416,7 +419,7 @@ nav ul li a:hover{
 }
 
 .myServiceCards {
-    transition: background-color 0.5s ease, color 0.3s ease;
+    transition: background-color 0.2s ease, color 0.3s ease;
 }
 
 .myServiceCards:hover {
@@ -569,11 +572,11 @@ nav ul li a:hover{
 }
 
 .mainContent.dark nav ul li a:hover{
-    color: $text-yellow;
+    color: #fcc5c5;
 }
 
 .mainContent.dark nav ul li:hover{
-    color: $text-yellow;
+    color: #fcc5c5;
 }
 
 .mainContent.dark nav ul li::after {
@@ -720,7 +723,15 @@ nav ul li a:hover{
 
 .mainContent.dark .image-container {
     background: #363649;
-    border: 2px black solid;
+    border: 1px #262631 solid;
+}
+
+.mainContent.dark .image-container img{
+    display: none;
+}
+
+.mainContent.dark .image-container .hidden{
+    display: flex;
 }
 
 .mainContent.dark {
@@ -732,9 +743,10 @@ nav ul li a:hover{
 }
 
 .mainContent.dark .projectsSection {
-    margin-bottom: 2rem;
+    margin-bottom: 0.5rem;
 }
 
 body.dark {
     background: $standart-black;
 }
+
